base/apps/irc/marmithon/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: marmitton-access
  namespace: irc
spec:
  podSelector:
    matchLabels:
      app: marmitton
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
